feat: enforce delivery status transitions